# Gerenciador-de-senhas

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  data.db  data.db-shm  data.db-wal  data1.db  diesel.toml  gdtgr
migrations/2025-02-04-003826_create_users/: up.sql
migrations/2025-02-09-220224_create_users/: up.sql
migrations/2025-02-11-235349_create_passwords/: up.sql
migrations/2025-02-15-132103_create_passwords_table/: down.sql  up.sql
migrations/2025-02-16-170212_recreate_passwords/: down.sql  up.sql
src/: auth.rs  cors.rs  cryp.rs  db.rs  lib.rs  main.rs  models.rs  password.rs  routes.rs  schema.rs
tests/: auth_test.rs  backend_tests.rs  crypt_tests.rs
vaultify/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
vaultify-backend/: Cargo.toml
vaultify-backend/src/: main.rs  routes.rs
vaultify/public/: linkedin.avif
vaultify/src/app/: layout.tsx  page.tsx
vaultify/src/app/2fa/: page.tsx
vaultify/src/app/_components/: cadastroCard.tsx  categoru-card.tsx  header.tsx  password-cards.tsx  sidebar.tsx
vaultify/src/app/_components/cadastro/: Mensagem.tsx
vaultify/src/app/adicionar-senha/: page.tsx
vaultify/src/app/cadastro/: page.tsx
vaultify/src/app/categorias/: page.tsx
vaultify/src/app/dashboard/: page.tsx
vaultify/src/app/landingPage/: layout.tsx  page.tsx
vaultify/src/app/login/: page.tsx
vaultify/src/app/redefinir-senha/: page.tsx
vaultify/src/components/ui/: avatar.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  label.tsx  tooltip.tsx
(+4 files in other folders)
