[package]
name = "Gerenciador-de-senhas"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
simple-log = "2.1.1"
log = "0.4.20"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]