[package]
name = "backend-hash-mfa"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
rand = "0.8"
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15" 
base32 = "0.4"   # Para codificar chaves secretas
totp-rs = "5.6.0"    # Para gerar/verificar códigos 2FA
qrcode = "0.12"
image = "0.24"
aes-gcm = "0.10"
hex = "0.4"
base64 = "0.2"