[package]
name = "vaultify-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"  # Para gerar IDs únicos
jsonwebtoken = "8.0"  # Para geração de JWT
argon2 = "0.4"  # Para hashing de senhas
chrono = "0.4"  # Para manipulação de datas (validade do token)